syntax = "proto3";

package auth.ticket.validate.service;

service AuthorizePb {
    rpc Authorize (AuthorizeRequestPb) returns (AuthorizeResponsePb);
}
message AuthorizeRequestPb {
    bool allow_any_role = 1;
    repeated string require_roles = 2;
}
message AuthorizeResponsePb {}
